--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -86,6 +86,12 @@ body {
     font-size: 1.5rem;
   }
 }
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-align: justify;
+  text-justify: inter-word;
+}
 // .main {
 //   height: auto !important;
 //   position: static !important;
