--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -92,6 +92,33 @@ p {
   text-align: justify;
   text-justify: inter-word;
 }
+
+.gukar-title {
+  font-size: 2rem;
+  margin: 0 auto;
+  padding-bottom: 1rem;
+  font-weight: 700;
+  font-style: normal;
+}
+.section-page {
+  padding-bottom: 3rem;
+}
+.content-news {
+  padding: 2rem 1rem 5rem;
+  min-height: 70vh;
+  max-width: 1080px;
+  width: 100vw;
+  margin: auto;
+  background-color: #f7f7f7;
+}
+.section-title {
+  font-size: 2rem;
+  margin: 0 auto;
+  padding-bottom: 1rem;
+  font-weight: 700;
+  line-height: 1.4;
+  font-style: normal;
+}
 // .main {
 //   height: auto !important;
 //   position: static !important;
