--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -93,13 +93,7 @@ p {
   text-justify: inter-word;
 }
 
-.gukar-title {
-  font-size: 2rem;
-  margin: 0 auto;
-  padding-bottom: 1rem;
-  font-weight: 700;
-  font-style: normal;
-}
+
 .section-page {
   padding-bottom: 3rem;
 }
@@ -111,7 +105,7 @@ p {
   margin: auto;
   background-color: #f7f7f7;
 }
-.section-title {
+.page-subtitle {
   font-size: 2rem;
   margin: 0 auto;
   padding-bottom: 1rem;
@@ -119,6 +113,7 @@ p {
   line-height: 1.4;
   font-style: normal;
 }
+
 // .main {
 //   height: auto !important;
 //   position: static !important;
